# Renewable_energy

./: .env  pyproject.toml
Ember_Climate/: script1.ipynb
Explication/: biblio.bib  explications_demarche_pj.aux  explications_demarche_pj.bbl  explications_demarche_pj.blg  explications_demarche_pj.fdb_latexmk  explications_demarche_pj.fls  explications_demarche_pj.out  explications_demarche_pj.tex  explications_demarche_pj.toc
IRENA/: IRENA_RE_Jobs_Annual_Review_2023.xlsx  prod_capacite_elect.ipynb  sript_job_md.ipynb
Librairies/: alimentation_table_mysql.py  lib_Owid.py  model_indicators_base.py  model_transformed_base.py
OWID/: capacity_script1.py  capacity_script2.py  cost_script1.py  cost_script2.py  investments_script1.py  investments_script2.py  patents_script1.py  patents_script2.py  travail.code-workspace
OWID/Notebook/: investments_script_graph.ipynb
